Open system menu when click the status tray with volume popup opened.

Should open the system menu with one click of the status tray when a
popup detailed view is visible. This is a regression issue related to
https://codereview.chromium.org/2784163003/

BUG=711330

Review-Url: https://codereview.chromium.org/2818183002
Cr-Commit-Position: refs/heads/master@{#465801}

Former-commit-id: 444e30cbb5d2bc60ea021b2405a6cfeea17ca14c